ISS-12-1-47 Green Bar Section Spacing & Alignment Fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -2364,7 +2364,7 @@ div:last-child>.hpp-dtc-m-tipcard_holder {
   }
 
   .hpp-dtc-looking-for-resources__content {
-    text-align: center;
+    text-align: left;
     padding: 6.5rem 0
   }
 
@@ -6852,7 +6852,7 @@ div:last-child>.hpp-dtc-m-tipcard_holder {
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content .description {
     width: 46rem;
     margin-bottom: 3.3rem;
-    margin-inline: auto
+    margin-inline: 0
   }
 }
 
@@ -6864,7 +6864,7 @@ div:last-child>.hpp-dtc-m-tipcard_holder {
 
 @media screen and (min-width:992px) {
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content {
-    padding-bottom: 12.4rem
+    /* padding-bottom: 12.4rem */
   }
 
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content .title {
@@ -6872,7 +6872,7 @@ div:last-child>.hpp-dtc-m-tipcard_holder {
   }
 
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content .description {
-    margin-inline: auto;
+    margin-inline: 0;
     width: max-content;
     padding: 0
   }
